[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_project"
version = "0.1.0"
description = "Pact contract testing setup"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest",
    "pact-python",
    "requests",
    "pact-broker-client",
    "yarl",  # Add yarl as a dependency
    "testcontainers",
    "mock",
    pytest-xdist = "^2.5.0"
]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pact-python",
    "testcontainers",  # Add testcontainers to the test environment
    "mock"             # Add mock to the test environment
]

[tool.hatch.envs.test.matrix]
python = ["3.13"]

# Adding package definition for your project
[tool.hatch.package]
# Specify the directory or package to include, usually the main project directory
# If your code is inside 'src' directory, change it to ["src/my_project"]
include = ["my_project"]

# Optional: Include other necessary files for your package
# This section ensures additional files like LICENSE or README are included
# You can adjust as needed.
# include = ["my_project", "LICENSE", "README.md"]

# Optional: Exclude unwanted files from the package distribution
# You can define exclusions for files like tests or docs if needed.
# exclude = ["tests", "docs"]

