[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_project"
version = "0.1.0"
description = "Pact contract testing setup"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.13"

dependencies = [
    "pytest",
    "pact-python",
    "requests",
    "pact-broker-client",
    "yarl",               # Required for URL handling
    "testcontainers",      # For containerized tests
    "mock",                # For mocking objects in tests
    "pytest-xdist",       # For parallel test execution
    "uvicorn",             # For running FastAPI server
    "flask"                # For Flask-based provider
]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pact-python",
    "testcontainers",  # For containerized tests in the test environment
    "mock"             # For mocking in tests
]

[tool.hatch.envs.test.matrix]
python = ["3.13"]

[tool.hatch.package]
# Specify the directory or package to include, usually the main project directory
# If your code is inside the 'src' directory, adjust the include path accordingly.
include = ["my_project"]

# Optional: Include additional files for packaging
# You can adjust this to include files like LICENSE or README.md
# include = ["my_project", "LICENSE", "README.md"]

# Optional: Exclude unwanted files from the package distribution
# Exclude files like tests or docs if needed
# exclude = ["tests", "docs"]